--- a/survey/survey.html
+++ b/survey/survey.html
@@ -16,11 +16,11 @@
         <div class="survey-box">
             <div class="question">question</div>
             <div class="responses">
-                <div class="choose">RESPONSE</div>
-                <div class="choose">RESPONSE</div>
-                <div class="choose">RESPONSE</div>
-                <div class="choose">RESPONSE</div>
-                <div class="choose">RESPONSE</div>
+                <div class="choose">choose</div>
+                <div class="choose">choose</div>
+                <div class="choose">choose</div>
+                <div class="choose">choose</div>
+                <div class="choose">choose</div>
             </div>
         </div>
     </main>
