--- a/survey/survey.html
+++ b/survey/survey.html
@@ -2,6 +2,12 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link
+    rel="stylesheet"
+    href="https://use.fontawesome.com/releases/v5.7.2/css/all.css"
+    integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr"
+    crossorigin="anonymous"
+  />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="survey.css">
     <title>LifeOn42</title>
@@ -25,8 +31,12 @@
         </div>
     </main>
     <nav>
-        <div class="btn">BTN_BACK</div>
-        <div class="btn">BTN_BACK</div>
+        <!-- <input type="button" value="back">
+        <input type="button" value="back"> -->
+        <!-- <div class="btn">BTN_BACK</div> -->
+        <!-- <div class="btn">BTN_BACK</div> -->
+        <button id=jsBack>back</button>
+        <button id=jsNext>next</button>
     </nav>
 </body>
 </html>
