--- a/index.html
+++ b/index.html
@@ -14,6 +14,10 @@
 </head>
 <body class="main">
     <div class="title">오늘 저녁은 카레다 🍛</div>
-    <div class="button">START</div>
+    <a href="survey/survey.html">
+      <button onclick="location.href='survey/survey.html'">
+        START
+      </button>
+    </a>  
 </body>
 </html>
