--- a/result/result.html
+++ b/result/result.html
@@ -13,19 +13,30 @@
     <title>LifeOn42</title>
 </head>
 <body>
+    <header>
+        <div class="status-bar">
+            status-bar(JS)
+        </div>
+    </header>
     <div class="result">
         <div class="title">당신의 LifeOn42는...</div>
         <div class="character">
             result
-        </div>     
-        <button id=jsKakao>
-            <i class="fas fa-comment-dots"></i>
-        </button>
-        <button class="insta">
-            <i class="fas fa-comment-dots"></i>
-        </button>
-        <button class="save"></button>
+        </div>
+        <div class="snsBtn">    
+            <button id=jsKakao>
+                <i class="fas fa-comment-dots"></i>
+            </button>
+            <button class="insta">
+                <i class="fab fa-instagram"></i>
+            </button>
+            <button class="save">
+                <i class="fas fa-download"></i>
+            </button>
+            <button class="share">
+                <i class="fas fa-share-alt"></i>
+            </button>
+        </div>
     </div>
-
 </body>
 </html>
