--- a/survey/survey.html
+++ b/survey/survey.html
@@ -18,8 +18,8 @@
             status-bar(JS)
         </div>
     </header>
-    <main>
-        <div class="survey-box">
+    <div class="result">
+        <!-- <div class="survey-box"> -->
             <div class="question">question</div>
             <div class="responses">
                 <div class="choose">choose</div>
@@ -28,8 +28,8 @@
                 <div class="choose">choose</div>
                 <div class="choose">choose</div>
             </div>
-        </div>
-    </main>
+        <!-- </div> -->
+    </div>
     <nav>
         <!-- <input type="button" value="back">
         <input type="button" value="back"> -->
