--- a/survey/survey.html
+++ b/survey/survey.html
@@ -1,42 +1,42 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
+  <head>
+    <meta charset="UTF-8" />
     <link
-    rel="stylesheet"
-    href="https://use.fontawesome.com/releases/v5.7.2/css/all.css"
-    integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr"
-    crossorigin="anonymous"
-  />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="survey.css">
+      rel="stylesheet"
+      href="https://use.fontawesome.com/releases/v5.7.2/css/all.css"
+      integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr"
+      crossorigin="anonymous"
+    />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="survey.css" />
     <title>LifeOn42</title>
-</head>
-<body>
+  </head>
+  <body>
     <header>
-        <div class="status-bar">
-            status-bar(JS)
-        </div>
+      <div class="status-bar">status-bar(JS)</div>
     </header>
     <div class="result">
-        <!-- <div class="survey-box"> -->
-            <div class="question">question</div>
-            <div class="responses">
-                <div class="choose">choose</div>
-                <div class="choose">choose</div>
-                <div class="choose">choose</div>
-                <div class="choose">choose</div>
-                <div class="choose">choose</div>
-            </div>
-        <!-- </div> -->
+      <!-- <div class="survey-box"> -->
+      <div class="question">question</div>
+      <div class="responses">
+        <div class="choose">choose</div>
+        <div class="choose">choose</div>
+        <div class="choose">choose</div>
+        <div class="choose">choose</div>
+        <div class="choose">choose</div>
+      </div>
+      <!-- </div> -->
     </div>
     <nav>
-        <!-- <input type="button" value="back">
+      <!-- <input type="button" value="back">
         <input type="button" value="back"> -->
-        <!-- <div class="btn">BTN_BACK</div> -->
-        <!-- <div class="btn">BTN_BACK</div> -->
-        <button id=jsBack>back</button>
-        <button id=jsNext>next</button>
+      <!-- <div class="btn">BTN_BACK</div> -->
+      <!-- <div class="btn">BTN_BACK</div> -->
+      <button id="jsBack">back</button>
+      <button id="jsNext">next</button>
     </nav>
-</body>
+    <script src="js/survey.js"></script>
+    <script src="js/data.js"></script>
+  </body>
 </html>
