--- a/index.html
+++ b/index.html
@@ -13,10 +13,13 @@
     <title>LifeOn42</title>
   </head>
   <body class="main">
+    <div class="midBox">
     <div class="title">LifeOn42</div>
+    <input type="text" class="js-user user" placeholder="what's your name?"></input>
     <a href="survey/survey.html">
       <button onclick="location.href='survey/survey.html'">START</button>
     </a>
     <script src="js/index.js"></script>
+  </div>
   </body>
 </html>
