--- a/survey/survey.html
+++ b/survey/survey.html
@@ -2,12 +2,12 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link
+    <!-- <link
       rel="stylesheet"
       href="https://use.fontawesome.com/releases/v5.7.2/css/all.css"
       integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr"
       crossorigin="anonymous"
-    />
+    /> -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="survey.css" />
     <title>LifeOn42</title>
@@ -29,14 +29,14 @@
       <!-- </div> -->
     </div>
     <nav>
-      <!-- <input type="button" value="back">
-        <input type="button" value="back"> -->
-      <!-- <div class="btn">BTN_BACK</div> -->
-      <!-- <div class="btn">BTN_BACK</div> -->
-      <button id="jsBack">back</button>
-      <button id="jsNext">next</button>
+      <form>
+       <!-- <input type="button" value="back"> -->
+       <!-- <div class="btn">BTN_BACK</div> -->
+       <!-- <button id="jsBack">back</button> -->
+        <button id="jsNext">next</button>
+      </form>
     </nav>
-    <script src="js/survey.js"></script>
-    <script src="js/data.js"></script>
+    <script src="data.js"></script>
+    <script src="survey.js"></script>
   </body>
 </html>
