--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
       <button class="js-button">START</button>
     </a>
     <script src="index.js"></script>
+    <script src="survey/data.js"></script>
     <script src="survey/survey.js"></script>
     <script src="result/result.js"></script>
   </div>
