result.js username

--- a/result/result.html
+++ b/result/result.html
@@ -14,7 +14,7 @@
 </head>
 <body>
     <div class="result">
-        <div class="title">당신의 LifeOn42는...</div>
+        <div class="js-title title">당신의 LifeOn42는...</div>
         <div class="character">
             result
         </div>
@@ -32,6 +32,7 @@
                 <i class="fas fa-share-alt"></i>
             </button>
         </div>
-    </div>
+	</div>
+    <script src="result.js"></script>
 </body>
 </html>
