--- a/result/result.html
+++ b/result/result.html
@@ -16,6 +16,7 @@
     <div class="result">
         <div class="js-title title">당신의 LifeOn42는...</div>
         <div class="character">
+            <canvas id="jsCanvas" class="canvas"></canvas>
             result
         </div>
         <div class="snsBtn">    
