--- a/result/result.html
+++ b/result/result.html
@@ -16,8 +16,8 @@
     <div class="result">
         <div class="js-title title">당신의 LifeOn42는...</div>
         <div class="character">
-            <canvas id="jsCanvas" class="canvas"></canvas>
-            result
+            <canvas id="jsCanvas" class="canvas">
+            </canvas>
         </div>
         <div class="snsBtn">    
             <button id=jsKakao>
@@ -33,7 +33,8 @@
                 <i class="fas fa-download"></i>
             </button>
         </div>
-	</div>
+    </div>
+    <script src="../survey/survey.js" type="module"></script>
     <script src="result.js"></script>
 </body>
 </html>
