--- a/result/result.html
+++ b/result/result.html
@@ -18,6 +18,20 @@
       <div class="character">
         <canvas id="jsCanvas" class="canvas"> </canvas>
       </div>
+      <div class="creater">
+        <div class="profile">
+          seohchoi
+          <a href="https://github.com/seohee-choi">
+            <i class="fab fa-github"></i>
+          </a>
+        </div>
+        <div class="profile">
+          yeslee
+          <a href="https://github.com/yeslee-v">
+            <i class="fab fa-github"></i>
+          </a>
+        </div>
+      </div>
       <div class="snsBtn">
         <button onclick="share('title','url')">
           <i class="fas fa-share-alt"></i>
