--- a/index.html
+++ b/index.html
@@ -7,12 +7,20 @@
       href="https://use.fontawesome.com/releases/v5.7.2/css/all.css"
       integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr"
       crossorigin="anonymous"
-    /> -->
+	/> -->
+	<link rel="preconnect" href="https://fonts.gstatic.com">
+  <link 
+  href="https://fonts.googleapis.com/css2?family=Russo+One&display=swap"
+  rel="stylesheet"
+  >
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Rubik&display=swap" rel="stylesheet">
+  
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="index.css" />
     <title>LifeOn42</title>
   </head>
-  <body class="main">
+  <body>
     <div class="midBox">
       <div class="title">LifeOn42</div>
       <form class="js-user">
