not complete css

--- a/result/result.html
+++ b/result/result.html
@@ -8,6 +8,13 @@
       integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr"
       crossorigin="anonymous"
     />
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link 
+  href="https://fonts.googleapis.com/css2?family=Russo+One&display=swap"
+  rel="stylesheet"
+  >
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Black+Han+Sans&family=Nanum+Gothic:wght@800&display=swap" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="result.css" />
     <title>LifeOn42</title>
@@ -18,21 +25,7 @@
       <div class="character">
         <canvas id="jsCanvas" class="canvas"> </canvas>
       </div>
-      <div class="creater">
-        <div class="profile">
-          seohchoi
-          <a href="https://github.com/seohee-choi">
-            <i class="fab fa-github"></i>
-          </a>
-        </div>
-        <div class="profile">
-          yeslee
-          <a href="https://github.com/yeslee-v">
-            <i class="fab fa-github"></i>
-          </a>
-        </div>
-      </div>
-      <div class="snsBtn">
+      <div class="Btns">
         <button onclick="share('title','url')">
           <i class="fas fa-share-alt"></i>
         </button>
@@ -40,6 +33,25 @@
           <i class="fas fa-download"></i>
         </button>
       </div>
+      <div class="creater">
+        <div class="discription txt">
+          안녕하세요, 저희의 겨울 방학을 맞아 2주동안 갈고 갈아 만든 프로젝트입니다.
+        </div>
+        <div class="discription">
+          <div class="name">
+          @seohchoi
+        <a href="https://github.com/seohee-choi">
+          <i class="fab fa-github"></i>
+        </a>
+      </div>
+        <div class="name">
+          @yeslee
+        <a href="https://github.com/yeslee-v">
+          <i class="fab fa-github"></i>
+        </a>
+      </div>
+      </div>
+    </div>
     </div>
     <script src="result.js"></script>
   </body>
