--- a/result/result.html
+++ b/result/result.html
@@ -1,58 +1,70 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link
-      rel="stylesheet"
-      href="https://use.fontawesome.com/releases/v5.7.2/css/all.css"
-      integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr"
-      crossorigin="anonymous"
-    />
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-  <link 
-  href="https://fonts.googleapis.com/css2?family=Russo+One&display=swap"
-  rel="stylesheet"
-  >
+
+<head>
+  <meta charset="UTF-8" />
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css"
+    integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous" />
   <link rel="preconnect" href="https://fonts.gstatic.com">
-<link href="https://fonts.googleapis.com/css2?family=Black+Han+Sans&family=Nanum+Gothic:wght@800&display=swap" rel="stylesheet">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="result.css" />
-    <title>LifeOn42</title>
-  </head>
-  <body>
-    <div class="result">
-      <div class="js-title title">당신의 LifeOn42는...</div>
-      <div class="character">
-        <canvas id="jsCanvas" class="canvas"> </canvas>
+  <link href="https://fonts.googleapis.com/css2?family=Russo+One&display=swap" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Black+Han+Sans&family=Nanum+Gothic:wght@800&display=swap"
+    rel="stylesheet">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" href="result.css" />
+  <title>LifeOn42</title>
+</head>
+
+<body>
+  <div class="result">
+    <div class="js-title title">당신의 LifeOn42는...</div>
+    <div class="character">
+      <canvas id="jsCanvas" class="canvas"> </canvas>
+    </div>
+    <div class="Btns">
+      <button onclick="share('title','url')">
+        <i class="fas fa-share-alt">
+          <div class="exBtn">share</div>
+        </i>
+      </button>
+      <button class="jsSave">
+        <i class="fas fa-download">
+          <div class="exBtn">download</div>
+        </i>
+      </button>
+    </div>
+    <div class="explain">
+      <div class="discription txt">
+        if(kakao)에서 영감을 받아 만든 프로젝트입니다.
+        <br>
+        재미있었다면 주변 사람들에게 공유해주세요 💌
       </div>
-      <div class="Btns">
-        <button onclick="share('title','url')">
-          <i class="fas fa-share-alt"></i>
-        </button>
-        <button class="jsSave">
-          <i class="fas fa-download"></i>
-        </button>
+      <div class="discription dev">
+        👩‍💻👩‍💻👩‍💻👩‍💻👩‍💻👩‍💻👩‍💻 만든 사람들 👩‍💻👩‍💻👩‍💻👩‍💻👩‍💻👩‍💻👩‍💻
       </div>
-      <div class="creater">
-        <div class="discription txt">
-          안녕하세요, 저희의 겨울 방학을 맞아 2주동안 갈고 갈아 만든 프로젝트입니다.
-        </div>
-        <div class="discription">
+      <div class="discription">
+        <div class="creater">
+          <img src="profile/seohchoi.png" width="100" height="130">
           <div class="name">
-          @seohchoi
-        <a href="https://github.com/seohee-choi">
-          <i class="fab fa-github"></i>
-        </a>
-      </div>
-        <div class="name">
-          @yeslee
-        <a href="https://github.com/yeslee-v">
-          <i class="fab fa-github"></i>
-        </a>
-      </div>
+            @seohchoi
+            <a href="https://github.com/seohee-choi">
+              <i class="fab fa-github"></i>
+            </a>
+          </div>
+        </div>
+        <div class="creater">
+          <img src="profile/yeslee.png" width="100" height="130">
+          <div class="name">
+            @yeslee
+            <a href="https://github.com/yeslee-v">
+              <i class="fab fa-github"></i>
+            </a>
+          </div>
+        </div>
       </div>
     </div>
-    </div>
-    <script src="result.js"></script>
-  </body>
+  </div>
+  <script src="result.js"></script>
+</body>
+
 </html>
