--- a/survey/survey.html
+++ b/survey/survey.html
@@ -1,42 +1,41 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <!-- <link
-      rel="stylesheet"
-      href="https://use.fontawesome.com/releases/v5.7.2/css/all.css"
-      integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr"
-      crossorigin="anonymous"
-	/> -->
-	<link rel="preconnect" href="https://fonts.gstatic.com">
-<link href="https://fonts.googleapis.com/css2?family=Nanum+Gothic:wght@800&display=swap" rel="stylesheet">
-<link rel="preconnect" href="https://fonts.gstatic.com">
-<link href="https://fonts.googleapis.com/css2?family=Black+Han+Sans&family=Nanum+Gothic:wght@800&display=swap" rel="stylesheet">
 
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="survey.css" />
-    <title>LifeOn42</title>
-  </head>
-  <body>
-    <header>
-      <progress class="status-bar" value="1">
-        </progress>
-    </header>
-    <div class="result">
-      <div class="question">question</div>
-      <div class="responses">
-        <div class="choose">choose</div>
-        <div class="choose">choose</div>
-        <div class="choose">choose</div>
-        <div class="choose">choose</div>
-      </div>
+<head>
+  <meta charset="UTF-8" />
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Nanum+Gothic:wght@800&display=swap" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Black+Han+Sans&family=Nanum+Gothic:wght@800&display=swap"
+    rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Russo+One&display=swap" rel="stylesheet">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" href="survey.css" />
+  <title>LifeOn42</title>
+</head>
+
+<body>
+  <header>
+    <progress class="status-bar" value="1">
+    </progress>
+  </header>
+  <div class="result">
+    <div class="question">question</div>
+    <div class="responses">
+      <div class="choose">choose</div>
+      <div class="choose">choose</div>
+      <div class="choose">choose</div>
+      <div class="choose">choose</div>
     </div>
-    <nav>
-      <form>
-        <button class="jsNext nextBtn" disabled="disabled">next</button>
-      </form>
-    </nav>
-    <script src="data.js"></script>
-    <script src="survey.js"></script>
-  </body>
+  </div>
+  <nav>
+    <form>
+      <button class="jsNext nextBtn" disabled="disabled">next</button>
+    </form>
+  </nav>
+  <script src="data.js"></script>
+  <script src="survey.js"></script>
+</body>
+
 </html>
