result bug fix, survey button css

--- a/result/result.html
+++ b/result/result.html
@@ -35,7 +35,7 @@
     </div>
     <div class="explain">
       <div class="discription txt">
-        if(kakao)에서 영감을 받아 만든 프로젝트입니다.
+        LifeOn42는 if(kakao)의 이벤트에서 영감을 받아 만든 프로젝트입니다.
         <br>
         재미있었다면 주변 사람들에게 공유해주세요 💌
       </div>
