--- a/result/result.html
+++ b/result/result.html
@@ -18,13 +18,27 @@
 <body>
   <div class="result">
     <div class="js-title title">당신의 LifeOn42는...</div>
-    <div class="character">
-      <canvas id="jsCanvas" class="canvas"> </canvas>
+    <div class="main">
+      <div class="character">
+        <canvas id="jsCanvas" class="canvas"> </canvas>
+      </div>
+      <div class="character">
+        h1-h6는 안먹히니 css에서 글씨 크기로 조정해야함h1-h6는 안먹히니 css에서 글씨 크기로 조정해야함h1-h6는 안먹히니 css에서 글씨 크기로 조정해야함h1-h6는 안먹히니 css에서 글씨
+        크기로 조정해야함h1-h6는 안먹히니 css에서 글씨 크기로 조정해야함h1-h6는 안먹히니 css에서 글씨 크기로 조정해야함h1-h6는 안먹히니 css에서 글씨 크기로 조정해야함h1-h6는 안먹히니
+        css에서 글씨 크기로 조정해야함h1-h6는 안먹히니 css에서 글씨 크기로 조정해야함h1-h6는 안먹히니 css에서 글씨 크기로 조정해야함h1-h6는 안먹히니 css에서 글씨 크기로
+        조정해야함h1-h6는 안먹히니 css에서 글씨 크기로 조정해야함h1-h6는 안먹히니 css에서 글씨 크기로 조정해야함h1-h6는 안먹히니 css에서 글씨 크기로 조정해야함h1-h6는 안먹히니 css에서
+        글씨 크기로 조정해야함h1-h6는 안먹히니 css에서 글씨 크기로 조정해야함h1-h6는 안먹히니 css에서 글씨 크기로 조정해야함h1-h6는 안먹히니 css에서 글씨 크기로 조정해야함h1-h6는
+        안먹히니 css에서 글씨 크기로 조정해야함h1-h6는 안먹히니 css에서 글씨 크기로 조정해야함h1-h6는 안먹히니 css에서 글씨 크기로 조정해야함h1-h6는 안먹히니 css에서 글씨 크기로
+        조정해야함h1-h6는 안먹히니 css에서 글씨 크기로 조정해야함h1-h6는 안먹히니 css에서 글씨 크기로 조정해야함h1-h6는 안먹히니 css에서 글씨 크기로 조정해야함h1-h6는 안먹히니 css에서
+        글씨 크기로 조정해야함h1-h6는 안먹히니 css에서 글씨 크기로 조정해야함h1-h6는 안먹히니 css에서 글씨 크기로 조정해야함h1-h6는 안먹히니 css에서 글씨 크기로 조정해야함h1-h6는
+        안먹히니 css에서 글씨 크기로 조정해야함h1-h6는 안먹히니 css에서 글씨 크기로 조정해야함h1-h6는 안먹히니 css에서 글씨 크기로 조정해야함h1-h6는 안먹히니 css에서 글씨 크기로
+        조정해야함
+      </div>
     </div>
     <div class="Btns">
       <button onclick="share('title','url')">
         <i class="fas fa-share-alt">
-          <div class="exBtn">share</div>
+          <div class="exBtn">link share</div>
         </i>
       </button>
       <button class="jsSave">
