index mobile view add

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   <body>
     <div class="midBox">
       <div class="title">LifeOn42</div>
-      <span>42서울 속 당신의 모습은?</span>
+      <div class="subtitle">42서울 속 당신의 모습은?</div>
       <form class="js-user">
         <input type="text" class="js-id user" placeholder="what's your name?"></input>
       </form>
