--- a/result/result.html
+++ b/result/result.html
@@ -16,67 +16,76 @@
 </head>
 
 <body>
-  <div class="result">
-    <div class="js-title title">당신의 LifeOn42는...</div>
-    <div class="main">
-      <div class="character">
-        <canvas id="jsCanvas" class="canvas"> </canvas>
-      </div>
-      <div class="character">
-        h1-h6는 안먹히니 css에서 글씨 크기로 조정해야함h1-h6는 안먹히니 css에서 글씨 크기로 조정해야함h1-h6는 안먹히니 css에서 글씨 크기로 조정해야함h1-h6는 안먹히니 css에서 글씨
-        크기로 조정해야함h1-h6는 안먹히니 css에서 글씨 크기로 조정해야함h1-h6는 안먹히니 css에서 글씨 크기로 조정해야함h1-h6는 안먹히니 css에서 글씨 크기로 조정해야함h1-h6는 안먹히니
-        css에서 글씨 크기로 조정해야함h1-h6는 안먹히니 css에서 글씨 크기로 조정해야함h1-h6는 안먹히니 css에서 글씨 크기로 조정해야함h1-h6는 안먹히니 css에서 글씨 크기로
-        조정해야함h1-h6는 안먹히니 css에서 글씨 크기로 조정해야함h1-h6는 안먹히니 css에서 글씨 크기로 조정해야함h1-h6는 안먹히니 css에서 글씨 크기로 조정해야함h1-h6는 안먹히니 css에서
-        글씨 크기로 조정해야함h1-h6는 안먹히니 css에서 글씨 크기로 조정해야함h1-h6는 안먹히니 css에서 글씨 크기로 조정해야함h1-h6는 안먹히니 css에서 글씨 크기로 조정해야함h1-h6는
-        안먹히니 css에서 글씨 크기로 조정해야함h1-h6는 안먹히니 css에서 글씨 크기로 조정해야함h1-h6는 안먹히니 css에서 글씨 크기로 조정해야함h1-h6는 안먹히니 css에서 글씨 크기로
-        조정해야함h1-h6는 안먹히니 css에서 글씨 크기로 조정해야함h1-h6는 안먹히니 css에서 글씨 크기로 조정해야함h1-h6는 안먹히니 css에서 글씨 크기로 조정해야함h1-h6는 안먹히니 css에서
-        글씨 크기로 조정해야함h1-h6는 안먹히니 css에서 글씨 크기로 조정해야함h1-h6는 안먹히니 css에서 글씨 크기로 조정해야함h1-h6는 안먹히니 css에서 글씨 크기로 조정해야함h1-h6는
-        안먹히니 css에서 글씨 크기로 조정해야함h1-h6는 안먹히니 css에서 글씨 크기로 조정해야함h1-h6는 안먹히니 css에서 글씨 크기로 조정해야함h1-h6는 안먹히니 css에서 글씨 크기로
-        조정해야함
+  <section id="main">
+    <div class="result">
+      <div class="js-title title">당신의 LifeOn42는...</div>
+      <div class="resultPic">
+        <div class="character">
+          <canvas id="jsCanvas" class="canvas"> </canvas>
+        </div>
+        <div class="character">
+          h1-h6는 안먹히니 css에서 글씨 크기로 조정해야함h1-h6는 안먹히니 css에서 글씨 크기로 조정해야함h1-h6는 안먹히니 css에서 글씨 크기로 조정해야함h1-h6는 안먹히니 css에서 글씨
+          크기로 조정해야함h1-h6는 안먹히니 css에서 글씨 크기로 조정해야함h1-h6는 안먹히니 css에서 글씨 크기로 조정해야함h1-h6는 안먹히니 css에서 글씨 크기로 조정해야함h1-h6는 안먹히니
+          css에서 글씨 크기로 조정해야함h1-h6는 안먹히니 css에서 글씨 크기로 조정해야함h1-h6는 안먹히니 css에서 글씨 크기로 조정해야함h1-h6는 안먹히니 css에서 글씨 크기로
+          조정해야함h1-h6는 안먹히니 css에서 글씨 크기로 조정해야함h1-h6는 안먹히니 css에서 글씨 크기로 조정해야함h1-h6는 안먹히니 css에서 글씨 크기로 조정해야함h1-h6는 안먹히니
+          css에서
+          글씨 크기로 조정해야함h1-h6는 안먹히니 css에서 글씨 크기로 조정해야함h1-h6는 안먹히니 css에서 글씨 크기로 조정해야함h1-h6는 안먹히니 css에서 글씨 크기로 조정해야함h1-h6는
+          안먹히니 css에서 글씨 크기로 조정해야함h1-h6는 안먹히니 css에서 글씨 크기로 조정해야함h1-h6는 안먹히니 css에서 글씨 크기로 조정해야함h1-h6는 안먹히니 css에서 글씨 크기로
+          조정해야함h1-h6는 안먹히니 css에서 글씨 크기로 조정해야함h1-h6는 안먹히니 css에서 글씨 크기로 조정해야함h1-h6는 안먹히니 css에서 글씨 크기로 조정해야함h1-h6는 안먹히니
+          css에서
+          글씨 크기로 조정해야함h1-h6는 안먹히니 css에서 글씨 크기로 조정해야함h1-h6는 안먹히니 css에서 글씨 크기로 조정해야함h1-h6는 안먹히니 css에서 글씨 크기로 조정해야함h1-h6는
+          안먹히니 css에서 글씨 크기로 조정해야함h1-h6는 안먹히니 css에서 글씨 크기로 조정해야함h1-h6는 안먹히니 css에서 글씨 크기로 조정해야함h1-h6는 안먹히니 css에서 글씨 크기로
+          조정해야함
+        </div>
       </div>
     </div>
-    <div class="Btns">
-      <button onclick="share('title','url')">
-        <i class="fas fa-share-alt">
-          <div class="exBtn">link share</div>
-        </i>
-      </button>
-      <button class="jsSave">
-        <i class="fas fa-download">
-          <div class="exBtn">download</div>
-        </i>
-      </button>
-    </div>
+  </section>
+  <section id="middle">
     <div class="explain">
       <div class="discription txt">
-        LifeOn42는 if(kakao)의 이벤트에서 영감을 받아 만든 프로젝트입니다.
-        <br>
         재미있었다면 주변 사람들에게 공유해주세요 💌
       </div>
-      <div class="discription dev">
-        👩‍💻👩‍💻👩‍💻👩‍💻👩‍💻👩‍💻👩‍💻 만든 사람들 👩‍💻👩‍💻👩‍💻👩‍💻👩‍💻👩‍💻👩‍💻
+      <div class="Btns">
+        <button onclick="share('title','url')">
+          <i class="fas fa-share-alt">
+            <div class="exBtn">link share</div>
+          </i>
+        </button>
+        <button class="jsSave">
+          <i class="fas fa-download">
+            <div class="exBtn">download</div>
+          </i>
+        </button>
       </div>
-      <div class="discription">
-        <div class="creater">
-          <img src="profile/seohchoi.png" width="100" height="130">
-          <div class="name">
-            @seohchoi
-            <a href="https://github.com/seohee-choi">
-              <i class="fab fa-github"></i>
-            </a>
-          </div>
+  </section>
+  <section id="developers">
+    <div class="discription dev">
+      👩‍💻👩‍💻👩‍💻👩‍💻👩‍💻👩‍💻👩‍💻 만든 사람들 👩‍💻👩‍💻👩‍💻👩‍💻👩‍💻👩‍💻👩‍💻
+    </div>
+    <div class="discription">
+      <div class="creater">
+        <img src="profile/seohchoi.png" width="100" height="130">
+        <div class="name">
+          @seohchoi
+          <a href="https://github.com/seohee-choi">
+            <i class="fab fa-github"></i>
+          </a>
         </div>
-        <div class="creater">
-          <img src="profile/yeslee.png" width="100" height="130">
-          <div class="name">
-            @yeslee
-            <a href="https://github.com/yeslee-v">
-              <i class="fab fa-github"></i>
-            </a>
-          </div>
+      </div>
+      <div class="creater">
+        <img src="profile/yeslee.png" width="100" height="130">
+        <div class="name">
+          @yeslee
+          <a href="https://github.com/yeslee-v">
+            <i class="fab fa-github"></i>
+          </a>
         </div>
       </div>
     </div>
+    <h3>
+      LifeOn42는 if(kakao)의 이벤트에서 영감을 받아 만든 프로젝트입니다.
+    </h3>
+  </section>
   </div>
   <script src="../survey/data.js"></script>
   <script src="result.js"></script>
