--- a/result/result.html
+++ b/result/result.html
@@ -57,16 +57,23 @@
           </i>
         </button>
       </div>
+      <div class="txt">
+        ※ 공유 지원 브라우저는 다음과 같습니다
+        <br>
+        - Web: Microsoft Edge, Safari
+        <br>
+        - Mobile: 모두 지원
+      </div>
   </section>
   <section id="developers">
     <div class="discription dev">
-      👩‍💻👩‍💻👩‍💻👩‍💻👩‍💻👩‍💻👩‍💻 만든 사람들 👩‍💻👩‍💻👩‍💻👩‍💻👩‍💻👩‍💻👩‍💻
+      👩‍💻 개발자 소개 👩‍💻
     </div>
     <div class="discription">
       <div class="creater">
         <img src="profile/seohchoi.png" width="100" height="130">
         <div class="name">
-          @seohchoi
+          강아지 우엉이 친구, @seohchoi
           <a href="https://github.com/seohee-choi">
             <i class="fab fa-github"></i>
           </a>
@@ -75,7 +82,7 @@
       <div class="creater">
         <img src="profile/yeslee.png" width="100" height="130">
         <div class="name">
-          @yeslee
+          텀블러를 사랑하는 @yeslee
           <a href="https://github.com/yeslee-v">
             <i class="fab fa-github"></i>
           </a>
