--- a/result/result.html
+++ b/result/result.html
@@ -89,8 +89,10 @@
         </div>
       </div>
     </div>
+  </section>
+  <section id="ifkakao">
     <h3>
-      LifeOn42는 if(kakao)의 이벤트에서 영감을 받아 만든 프로젝트입니다.
+      LifeOn42는 if(kakao)의 이벤트에서 영감을 받아 제작한 프로젝트입니다.
     </h3>
   </section>
   </div>
