uncomplete 'add subs'

--- a/result/result.html
+++ b/result/result.html
@@ -24,18 +24,7 @@
           <canvas id="jsCanvas" class="canvas"> </canvas>
         </div>
         <div class="character">
-          h1-h6는 안먹히니 css에서 글씨 크기로 조정해야함h1-h6는 안먹히니 css에서 글씨 크기로 조정해야함h1-h6는 안먹히니 css에서 글씨 크기로 조정해야함h1-h6는 안먹히니 css에서 글씨
-          크기로 조정해야함h1-h6는 안먹히니 css에서 글씨 크기로 조정해야함h1-h6는 안먹히니 css에서 글씨 크기로 조정해야함h1-h6는 안먹히니 css에서 글씨 크기로 조정해야함h1-h6는 안먹히니
-          css에서 글씨 크기로 조정해야함h1-h6는 안먹히니 css에서 글씨 크기로 조정해야함h1-h6는 안먹히니 css에서 글씨 크기로 조정해야함h1-h6는 안먹히니 css에서 글씨 크기로
-          조정해야함h1-h6는 안먹히니 css에서 글씨 크기로 조정해야함h1-h6는 안먹히니 css에서 글씨 크기로 조정해야함h1-h6는 안먹히니 css에서 글씨 크기로 조정해야함h1-h6는 안먹히니
-          css에서
-          글씨 크기로 조정해야함h1-h6는 안먹히니 css에서 글씨 크기로 조정해야함h1-h6는 안먹히니 css에서 글씨 크기로 조정해야함h1-h6는 안먹히니 css에서 글씨 크기로 조정해야함h1-h6는
-          안먹히니 css에서 글씨 크기로 조정해야함h1-h6는 안먹히니 css에서 글씨 크기로 조정해야함h1-h6는 안먹히니 css에서 글씨 크기로 조정해야함h1-h6는 안먹히니 css에서 글씨 크기로
-          조정해야함h1-h6는 안먹히니 css에서 글씨 크기로 조정해야함h1-h6는 안먹히니 css에서 글씨 크기로 조정해야함h1-h6는 안먹히니 css에서 글씨 크기로 조정해야함h1-h6는 안먹히니
-          css에서
-          글씨 크기로 조정해야함h1-h6는 안먹히니 css에서 글씨 크기로 조정해야함h1-h6는 안먹히니 css에서 글씨 크기로 조정해야함h1-h6는 안먹히니 css에서 글씨 크기로 조정해야함h1-h6는
-          안먹히니 css에서 글씨 크기로 조정해야함h1-h6는 안먹히니 css에서 글씨 크기로 조정해야함h1-h6는 안먹히니 css에서 글씨 크기로 조정해야함h1-h6는 안먹히니 css에서 글씨 크기로
-          조정해야함
+          여기에 설명쓰면 되지롱
         </div>
       </div>
     </div>
@@ -97,6 +86,7 @@
   </section>
   </div>
   <script src="../survey/data.js"></script>
+  <script src="../survey/explain.js"></script>
   <script src="result.js"></script>
 </body>
 
