add random imgs

--- a/result/result.html
+++ b/result/result.html
@@ -23,8 +23,11 @@
         <div class="character">
           <canvas id="jsCanvas" class="canvas"> </canvas>
         </div>
-        <div class="character">
-          여기에 설명쓰면 되지롱
+        <div class="character js-sub">
+          <div class="submain">
+          </div>
+          <div class="subsub">
+          </div>
         </div>
       </div>
     </div>
@@ -32,7 +35,7 @@
   <section id="middle">
     <div class="explain">
       <div class="discription txt">
-        재미있었다면 주변 사람들에게 공유해주세요 💌
+        재미있었다면 주변 사람에게 공유해주세요 💌
       </div>
       <div class="Btns">
         <button onclick="share('title','url')">
@@ -62,7 +65,7 @@
       <div class="creater">
         <img src="profile/seohchoi.png" width="100" height="130">
         <div class="name">
-          강아지 우엉이 친구, @seohchoi
+          우엉이🐺 친구 @seohchoi
           <a href="https://github.com/seohee-choi">
             <i class="fab fa-github"></i>
           </a>
@@ -80,9 +83,12 @@
     </div>
   </section>
   <section id="ifkakao">
-    <h3>
-      LifeOn42는 if(kakao)의 이벤트에서 영감을 받아 제작한 프로젝트입니다.
-    </h3>
+    <h2>
+      LifeOn42는 if(kakao)2020의 이벤트에서 영감을 받아 제작한 프로젝트입니다
+    </h2>
+    <h4>
+      테스트를 다시 하고 싶다면?&nbsp;&nbsp;<a href="https://seohee-choi.github.io/LifeOn42/">이곳</a>&nbsp;&nbsp;을 클릭해주세요😃
+    </h4>
   </section>
   </div>
   <script src="../survey/data.js"></script>
