edit when resize

--- a/result/result.html
+++ b/result/result.html
@@ -59,7 +59,7 @@
   </section>
   <section id="developers">
     <div class="discription dev">
-      👩‍💻 개발자 소개 👩‍💻
+      개발자 소개
     </div>
     <div class="discription">
       <div class="creater">
@@ -87,7 +87,7 @@
       LifeOn42는 if(kakao)2020의 이벤트에서 영감을 받아 제작한 프로젝트입니다
     </h2>
     <h4>
-      테스트를 다시 하고 싶다면?&nbsp;&nbsp;<a href="https://seohee-choi.github.io/LifeOn42/">이곳</a>&nbsp;&nbsp;을 클릭해주세요😃
+      테스트를 다시 하고 싶다면?&nbsp;&nbsp;<a href="https://seohee-choi.github.io/LifeOn42/">이곳</a>을 클릭해주세요😃
     </h4>
   </section>
   </div>
