add loading box

--- a/result/result.html
+++ b/result/result.html
@@ -16,6 +16,10 @@
 </head>
 
 <body>
+  <div class="loadingPage" style="display:none">
+    loading...
+  </div>
+  <div class="bodyDiv">
   <section id="main">
     <div class="result">
       <div class="js-title title">당신의 LifeOn42는...</div>
@@ -91,6 +95,7 @@
     </h4>
   </section>
   </div>
+</div>
   <script src="../survey/data.js"></script>
   <script src="../survey/explain.js"></script>
   <script src="result.js"></script>
