explain.js new line add

--- a/result/result.html
+++ b/result/result.html
@@ -97,7 +97,7 @@
   </div>
 </div>
   <script src="../survey/data.js"></script>
-  <script src="../survey/explain.js"></script>
+  <script src="explain.js"></script>
   <script src="result.js"></script>
 </body>
 
