--- a/result/result.html
+++ b/result/result.html
@@ -20,84 +20,84 @@
     loading...
   </div>
   <div class="bodyDiv">
-  <section id="main">
-    <div class="result">
-      <div class="js-title title">당신의 LifeOn42는...</div>
-      <div class="resultPic">
-        <div class="character">
-          <canvas id="jsCanvas" class="canvas"> </canvas>
-        </div>
-        <div class="character js-sub">
-          <div class="submain">
+    <section id="main">
+      <div class="result">
+        <div class="js-title title">당신의 LifeOn42는...</div>
+        <div class="resultPic">
+          <div class="character">
+            <canvas id="jsCanvas" class="canvas"> </canvas>
           </div>
-          <div class="subsub">
+          <div class="character js-sub">
+            <div class="submain">
+            </div>
+            <div class="subsub">
+            </div>
           </div>
         </div>
       </div>
-    </div>
-  </section>
-  <section id="middle">
-    <div class="explain">
-      <div class="discription txt">
-        재미있었다면 주변 사람에게 공유해주세요 💌
+    </section>
+    <section id="middle">
+      <div class="explain">
+        <div class="discription txt">
+          재미있었다면 주변 사람에게 공유해주세요 💌
+        </div>
+        <div class="Btns">
+          <button onclick="share('title','url')">
+            <i class="fas fa-share-alt">
+              <div class="exBtn">link share</div>
+            </i>
+          </button>
+          <button class="jsSave">
+            <i class="fas fa-download">
+              <div class="exBtn">download</div>
+            </i>
+          </button>
+        </div>
+        <div class="txt">
+          ※ 공유 지원 브라우저는 다음과 같습니다
+          <br>
+          - Web: Microsoft Edge, Safari
+          <br>
+          - Mobile: 모두 지원
+        </div>
+    </section>
+    <section id="developers">
+      <div class="discription dev">
+        개발자 소개
       </div>
-      <div class="Btns">
-        <button onclick="share('title','url')">
-          <i class="fas fa-share-alt">
-            <div class="exBtn">link share</div>
-          </i>
-        </button>
-        <button class="jsSave">
-          <i class="fas fa-download">
-            <div class="exBtn">download</div>
-          </i>
-        </button>
-      </div>
-      <div class="txt">
-        ※ 공유 지원 브라우저는 다음과 같습니다
-        <br>
-        - Web: Microsoft Edge, Safari
-        <br>
-        - Mobile: 모두 지원
-      </div>
-  </section>
-  <section id="developers">
-    <div class="discription dev">
-      개발자 소개
-    </div>
-    <div class="discription">
-      <div class="creater">
-        <img src="profile/seohchoi.png" width="100" height="130">
-        <div class="name">
-          우엉이🐺 친구 @seohchoi
-          <a href="https://github.com/seohee-choi">
-            <i class="fab fa-github"></i>
-          </a>
+      <div class="discription">
+        <div class="creater">
+          <img src="profile/seohchoi.png" width="100" height="130">
+          <div class="name">
+            우엉이🐺 친구 @seohchoi
+            <a href="https://github.com/seohee-choi">
+              <i class="fab fa-github"></i>
+            </a>
+          </div>
+        </div>
+        <div class="creater">
+          <img src="profile/yeslee.png" width="100" height="130">
+          <div class="name">
+            텀블러를 사랑하는 @yeslee
+            <a href="https://github.com/yeslee-v">
+              <i class="fab fa-github"></i>
+            </a>
+          </div>
         </div>
       </div>
-      <div class="creater">
-        <img src="profile/yeslee.png" width="100" height="130">
-        <div class="name">
-          텀블러를 사랑하는 @yeslee
-          <a href="https://github.com/yeslee-v">
-            <i class="fab fa-github"></i>
-          </a>
-        </div>
-      </div>
-    </div>
-  </section>
-  <section id="ifkakao">
-    <h2>
-      LifeOn42는 if(kakao)2020의 이벤트에서 영감을 받아 제작한 프로젝트입니다
-    </h2>
-    <h4>
-      테스트를 다시 하고 싶다면?&nbsp;&nbsp;<a href="https://seohee-choi.github.io/LifeOn42/">이곳</a>을 클릭해주세요😃
-    </h4>
-  </section>
+    </section>
+    <section id="ifkakao">
+      <h2>
+        LifeOn42는 if(kakao)2020의 이벤트에서 영감을 받아 제작한 프로젝트입니다
+      </h2>
+      <h4>
+        테스트를 다시 하고 싶다면?&nbsp;&nbsp;<a href="https://seohee-choi.github.io/LifeOn42/">이곳</a>을 클릭해주세요😃
+      </h4>
+    </section>
   </div>
-</div>
+  </div>
   <script src="../survey/data.js"></script>
-  <script src="../survey/explain.js"></script>
+  <script src="explain.js"></script>
   <script src="result.js"></script>
 </body>
 
