--- a/result/result.html
+++ b/result/result.html
@@ -67,18 +67,18 @@
       </div>
       <div class="discription">
         <div class="creater">
-          <img src="profile/seohchoi.png" width="100" height="130">
+          <img src="profile/seohchoi.png" width="180" height="180">
           <div class="name">
-            우엉이🐺 친구 @seohchoi
+            우엉이🐶 친구 @seohchoi
             <a href="https://github.com/seohee-choi">
               <i class="fab fa-github"></i>
             </a>
           </div>
         </div>
         <div class="creater">
-          <img src="profile/yeslee.png" width="100" height="130">
+          <img src="profile/yeslee.png" width="180" height="180">
           <div class="name">
-            텀블러를 사랑하는 @yeslee
+            커피☕를 사랑하는 @yeslee
             <a href="https://github.com/yeslee-v">
               <i class="fab fa-github"></i>
             </a>
