add returnBtn & polaroid style

--- a/result/result.html
+++ b/result/result.html
@@ -67,7 +67,7 @@
       </div>
       <div class="discription">
         <div class="creater">
-          <img src="profile/seohchoi.png" width="180" height="180">
+          <img src="profile/seohchoi.png" width="165" height="165">
           <div class="name">
             우엉이🐶 친구 @seohchoi
             <a href="https://github.com/seohee-choi">
@@ -76,7 +76,7 @@
           </div>
         </div>
         <div class="creater">
-          <img src="profile/yeslee.png" width="180" height="180">
+          <img src="profile/yeslee.png" width="165" height="165">
           <div class="name">
             커피☕를 사랑하는 @yeslee
             <a href="https://github.com/yeslee-v">
@@ -90,9 +90,9 @@
       <h2>
         LifeOn42는 if(kakao)2020의 이벤트에서 영감을 받아 제작한 프로젝트입니다
       </h2>
-      <h4>
-        테스트를 다시 하고 싶다면?&nbsp;&nbsp;<a href="https://seohee-choi.github.io/LifeOn42/">이곳</a>을 클릭해주세요😃
-      </h4>
+      <button class="js-return Return" onclick="againTest()">
+        테스트 다시 하기
+      </button>
     </section>
   </div>
   </div>
