--- a/index.html
+++ b/index.html
@@ -1,39 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <!-- <link
+
+<head>
+  <meta charset="UTF-8" />
+  <!-- <link
       rel="stylesheet"
       href="https://use.fontawesome.com/releases/v5.7.2/css/all.css"
       integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr"
       crossorigin="anonymous"
 	/> -->
-	<link rel="preconnect" href="https://fonts.gstatic.com">
-  <link 
-  href="https://fonts.googleapis.com/css2?family=Russo+One&display=swap"
-  rel="stylesheet"
-  >
-  <link rel="preconnect" href="https://fonts.gstatic.com"> 
-<link href="https://fonts.googleapis.com/css2?family=Nanum+Gothic+Coding&display=swap" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Russo+One&display=swap" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Nanum+Gothic+Coding&display=swap" rel="stylesheet">
 
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Rubik&display=swap" rel="stylesheet">
-  
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="index.css" />
-    <title>LifeOn42</title>
-  </head>
-  <body>
-    <div class="midBox">
-      <div class="title">LifeOn42</div>
-      <div class="subtitle">42서울 속 당신의 모습은?</div>
-      <form class="js-user">
-        <input type="text" class="js-id user" placeholder="what's your name?"></input>
-      </form>
-      <h3 class="alertName"></h3>
 
-      <button class="js-button">START</button>
-    </div>
-    <script src="index.js"></script>
-  </body>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" href="index.css" />
+  <title>LifeOn42</title>
+</head>
+
+<body>
+  <div class="midBox">
+    <div class="title">LifeOn42</div>
+    <div class="subtitle">42서울 속 당신의 모습은?</div>
+    <form class="js-user">
+      <input type="text" class="js-id user" placeholder="what's your name?"></input>
+    </form>
+    <h3 class="alertName"></h3>
+
+    <button class="js-button">START</button>
+  </div>
+  <script src="index.js"></script>
+</body>
+
 </html>
