change kr from en

--- a/index.html
+++ b/index.html
@@ -27,11 +27,11 @@
     <div class="title">LifeOn42</div>
     <div class="subtitle">42서울 속 당신의 모습은?</div>
     <form class="js-user">
-      <input type="text" class="js-id user" placeholder="what's your name?"></input>
+      <input type="text" class="js-id user" placeholder="이름을 입력해주세요"></input>
     </form>
     <h3 class="alertName"></h3>
 
-    <button class="js-button">START</button>
+    <button class="js-button">시작하기</button>
   </div>
   <script src="index.js"></script>
 </body>
