--- a/result/result.html
+++ b/result/result.html
@@ -42,7 +42,7 @@
           재미있었다면 주변 사람에게 공유해주세요 💌
         </div>
         <div class="Btns">
-          <button onclick="share('title','url')">
+          <button onclick="share('url')">
             <i class="fas fa-share-alt">
               <div class="exBtn">링크 공유</div>
             </i>
@@ -78,7 +78,7 @@
         <div class="creater">
           <img src="profile/yeslee.png">
           <div class="name">
-            텀블러🥃 친구 @yeslee
+            지구🌏의 친구 @yeslee
             <a href="https://github.com/yeslee-v">
               <i class="fab fa-github"></i>
             </a>
