--- a/survey/survey.html
+++ b/survey/survey.html
@@ -4,12 +4,8 @@
 <head>
   <meta charset="UTF-8" />
   <link rel="preconnect" href="https://fonts.gstatic.com">
-  <link href="https://fonts.googleapis.com/css2?family=Nanum+Gothic:wght@800&display=swap" rel="stylesheet">
-  <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Black+Han+Sans&family=Nanum+Gothic:wght@800&display=swap"
     rel="stylesheet">
-  <link rel="preconnect" href="https://fonts.gstatic.com">
-  <link href="https://fonts.googleapis.com/css2?family=Russo+One&display=swap" rel="stylesheet">
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="stylesheet" href="survey.css" />
   <title>LifeOn42</title>
@@ -29,11 +25,11 @@
       <div class="choose">choose</div>
     </div>
   </div>
-  <nav>
+  <div class="nav">
     <form>
-      <button class="jsNext nextBtn" disabled="disabled">next</button>
+      <button class="jsNext nextBtn" disabled="disabled">계속하기</button>
     </form>
-  </nav>
+  </div>
   <script src="data.js"></script>
   <script src="survey.js"></script>
 </body>
