--- a/index.html
+++ b/index.html
@@ -16,10 +16,9 @@
     <div class="title">LifeOn42</div>
     <div class="subtitle">42서울 속 당신의 모습은?</div>
     <form class="js-user">
-      <input type="text" class="js-id user" placeholder="이름을 입력해주세요"></input>
+      <input type="text" class="js-id user" placeholder="이름을 입력하세요"></input>
     </form>
     <h3 class="alertName"></h3>
-
     <button class="js-button">시작하기</button>
   </div>
   <script src="index.js"></script>
