css color change

--- a/survey/survey.html
+++ b/survey/survey.html
@@ -13,16 +13,16 @@
 
 <body>
   <header>
-    <progress class="status-bar" value="1">
+    <progress class="status-bar" value="1" max="0">
     </progress>
   </header>
   <div class="result">
-    <div class="question">question</div>
+    <div class="question"></div>
     <div class="responses">
-      <div class="choose">choose</div>
-      <div class="choose">choose</div>
-      <div class="choose">choose</div>
-      <div class="choose">choose</div>
+      <div class="choose"></div>
+      <div class="choose"></div>
+      <div class="choose"></div>
+      <div class="choose"></div>
     </div>
   </div>
   <div class="nav">
