remove underline from a link

--- a/result/result.html
+++ b/result/result.html
@@ -69,8 +69,9 @@
         <div class="creater">
           <img src="profile/seohchoi.png">
           <div class="name">
-            우엉이🐶 친구 @seohchoi
-            <a href="https://github.com/seohee-choi">
+            우엉이🐶 친구
+            <a href="https://github.com/seohee-choi" style="text-decoration: none;">
+              @seohchoi
               <i class="fab fa-github"></i>
             </a>
           </div>
@@ -78,8 +79,9 @@
         <div class="creater">
           <img src="profile/yeslee.png">
           <div class="name">
-            지구🌏의 친구 @yeslee
-            <a href="https://github.com/yeslee-v">
+            지구🌏의 친구
+            <a href="https://github.com/yeslee-v" style="text-decoration: none;">
+              @yeslee
               <i class="fab fa-github"></i>
             </a>
           </div>
