--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
   <link href="https://fonts.googleapis.com/css2?family=Nanum+Gothic:wght@800&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="index.css" />
   <title>LifeOn42</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+
 </head>
 
 <body>
