--- a/result/result.html
+++ b/result/result.html
@@ -42,7 +42,7 @@
           재미있었다면 주변 사람에게 공유해주세요 💌
         </div>
         <div class="Btns">
-          <button onclick="share('url')">
+          <button onclick="share()">
             <i class="fas fa-share-alt">
               <div class="exBtn">링크 공유</div>
             </i>
