--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 <body>
   <div class="midBox">
-    <div class="title">LifeOn42</div>
+    <img src="pic/logo.png" alt="LifeOn42" width="85%">
     <div class="subtitle">42서울 속 당신의 모습은?</div>
     <form class="js-user">
       <input type="text" class="js-id user" placeholder="이름을 입력하세요"></input>
