finally complete css

--- a/result/result.html
+++ b/result/result.html
@@ -99,7 +99,7 @@
         <img
         src="https://d1u4yishnma8v5.cloudfront.net/donarincano_gift.png"
         alt="donaricano-btn"
-        style="height:70px !important;width: 200px !important; background-color: #333333"
+        style="height:70px !important;width: 200px !important; background-color: rgb(72, 72, 72)"
         />
       </a>
     </section>
